# InfoStudent

./: CMakeLists.txt  main.cpp
Domeniu/: Materie.cpp  Materie.h  Nota.cpp  Nota.h  Profesor.cpp  Profesor.h  Student.cpp  Student.h  User.cpp  User.h
Erori/: RepositoryError.h  ValidationError.h
GUI/: AdminWindow.cpp  AdminWindow.h  MainWindow.cpp  MainWindow.h  Model.h  ModelGeneral.h  ModelTabelMaterii.h  ProfesorWindow.cpp  ProfesorWindow.h  StudentWindow.cpp  StudentWindow.h  UserWindow.h
Observer/: Observer.h
Repository/: InfoStudent.db  Repository.cpp  Repository.h
Service/: Service.cpp  Service.h
Validator/: Validator.h
